<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="@dimen/dialog_login_width"
        android:layout_height="@dimen/dialog_login_height"
        card_view:cardBackgroundColor="@color/greyPlanket"
        card_view:cardCornerRadius="@dimen/default_radius"
        android:layout_centerInParent="true"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="@dimen/textview_small_width"
                android:layout_height="wrap_content"
                android:text="@string/login_message_permission"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorDarkDefaultText"/>

            <com.fomdeveloper.planket.ui.view.widget.PlanketButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:textColor="@color/white"
                android:textSize="@dimen/button_big_textsize"
                android:paddingLeft="@dimen/padding_big"
                android:paddingRight="@dimen/padding_big"
                android:background="@drawable/blue_selector"
                android:text="@string/drawer_action_login"/>

            <TextView
                android:id="@+id/error_textview"
                android:layout_width="@dimen/textview_medium_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/textview_small_textsize"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/redPlanket"
                tools:text="@string/error_login"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/progressbar_small_size"
                android:layout_height="@dimen/progressbar_small_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:visibility="gone"/>

        </LinearLayout>



    </android.support.v7.widget.CardView>


</RelativeLayout>