<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/coordinator_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".ui.presentation.main.MainActivity">


<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.fomdeveloper.planket.ui.view.widget.PlanketTextView
            android:id="@+id/toolbar_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/textview_apptitle_textsize"
            android:textColor="@color/colorAccent"
            android:text="@string/app_title"
            />

    </android.support.v7.widget.Toolbar>


</android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                card_view:cardBackgroundColor="@color/darkGreyPlanket"
                card_view:cardCornerRadius="@dimen/default_radius"
                card_view:elevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textview_small_textsize"
                        android:text="@string/about_app"
                        android:id="@+id/textView" />

                    <com.fomdeveloper.planket.ui.view.widget.SmallGreyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDefaultText"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/app_description"/>

                    <com.fomdeveloper.planket.ui.view.widget.SmallGreyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/colorDefaultText"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/developed_by" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/my_name"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                card_view:cardBackgroundColor="@color/darkGreyPlanket"
                card_view:cardCornerRadius="@dimen/default_radius"
                card_view:elevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textview_small_textsize"
                        android:text="@string/project" />

                    <com.fomdeveloper.planket.ui.view.widget.SmallGreyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDefaultText"
                        android:layout_margin="@dimen/margin_small"
                        android:text="@string/project_description" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/margin_medium">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="RxJava"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Dagger 2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Retrofit 2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Okhttp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Butterknife"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Picasso"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Realm"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Parceler"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Timber"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Espresso"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Mockito"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textview_small_textsize"
                            android:text="Android support library"/>

                    </LinearLayout>


                    <com.fomdeveloper.planket.ui.view.widget.SmallGreyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDefaultText"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_gravity="center"
                        android:text="The source code is available on Github:"
                        android:id="@+id/smallGreyTextView" />


                    <com.fomdeveloper.planket.ui.view.widget.HtmlTextView
                        android:id="@+id/repository_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/repository"/>





                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>




